--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
-
-    <!-- You can insert your own image assets here -->
-    <!-- <item>
+    <item>
         <bitmap
-            android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:gravity="fill"
+            android:src="@mipmap/launch_background" />
+    </item>
+
+    <item android:top="200dp">
+        <bitmap android:src="@mipmap/launch_icon"
+            android:gravity="top" />
+    </item>
+
+    <item android:bottom="20dp">
+        <bitmap
+            android:gravity="bottom"
+            android:src="@mipmap/launch_logo" />
+    </item>
 </layer-list>
