--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -3,18 +3,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <bitmap
-            android:gravity="fill"
-            android:src="@drawable/jvx_bg" />
+            android:tileMode="disabled" android:gravity="top"
+            android:src="@mipmap/jvx_bg" />
     </item>
 
-    <item android:top="200dp">
-        <bitmap android:src="@drawable/jvx_ss"
+    <item android:top="150dp">
+        <bitmap android:src="@mipmap/jvx_ss"
             android:gravity="top" />
     </item>
 
     <item android:bottom="20dp">
         <bitmap
             android:gravity="bottom"
-            android:src="@drawable/sibvision_logo" />
-    </item>
+            android:src="@mipmap/sibvision_logo" />
+    </item>-->
 </layer-list>
