--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -16,5 +16,5 @@
         <bitmap
             android:gravity="bottom"
             android:src="@mipmap/sibvision_logo" />
-    </item>-->
+    </item>
 </layer-list>
