--- a/ios/Runner/Base.lproj/LaunchScreen.storyboard
+++ b/ios/Runner/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,10 +12,6 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ydg-fD-yQy"/>
-                        <viewControllerLayoutGuide type="bottom" id="xbc-2k-c8Z"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,7 +27,7 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_icon" translatesAutoresizingMaskIntoConstraints="NO" id="nna-WY-fdy">
-                                <rect key="frame" x="118.5" y="100" width="138" height="145"/>
+                                <rect key="frame" x="118.5" y="80" width="138" height="145"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="145" id="R0N-y7-V3e"/>
                                     <constraint firstAttribute="width" constant="138" id="kOg-Sr-n7F"/>
@@ -39,15 +36,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="rTb-VR-h7F" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3EE-yQ-fGh"/>
+                            <constraint firstItem="rTb-VR-h7F" firstAttribute="centerX" secondItem="5py-3A-uU3" secondAttribute="centerX" id="3EE-yQ-fGh"/>
+                            <constraint firstItem="5py-3A-uU3" firstAttribute="bottom" secondItem="rTb-VR-h7F" secondAttribute="bottom" constant="50" id="FgJ-Cu-Jqd"/>
                             <constraint firstAttribute="bottom" secondItem="Cxf-yv-N9a" secondAttribute="bottom" id="H43-0O-BI5"/>
-                            <constraint firstAttribute="trailing" secondItem="Cxf-yv-N9a" secondAttribute="trailing" id="Hq4-Ve-XaV"/>
-                            <constraint firstItem="nna-WY-fdy" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WPy-2b-XKi"/>
+                            <constraint firstItem="5py-3A-uU3" firstAttribute="trailing" secondItem="Cxf-yv-N9a" secondAttribute="trailing" id="Hq4-Ve-XaV"/>
+                            <constraint firstItem="nna-WY-fdy" firstAttribute="top" secondItem="5py-3A-uU3" secondAttribute="top" constant="80" id="SOO-k1-y7K"/>
+                            <constraint firstItem="nna-WY-fdy" firstAttribute="centerX" secondItem="5py-3A-uU3" secondAttribute="centerX" id="WPy-2b-XKi"/>
                             <constraint firstItem="Cxf-yv-N9a" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="adl-Lv-P6u"/>
-                            <constraint firstItem="Cxf-yv-N9a" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="j8q-v1-Gdn"/>
-                            <constraint firstItem="nna-WY-fdy" firstAttribute="top" secondItem="Ydg-fD-yQy" secondAttribute="bottom" constant="100" id="oGe-eJ-s2M"/>
-                            <constraint firstItem="xbc-2k-c8Z" firstAttribute="top" secondItem="rTb-VR-h7F" secondAttribute="bottom" constant="50" id="yPG-Fr-oRg"/>
+                            <constraint firstItem="Cxf-yv-N9a" firstAttribute="leading" secondItem="5py-3A-uU3" secondAttribute="leading" id="j8q-v1-Gdn"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="5py-3A-uU3"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
