Added App Icons and Splash Screen for Android

--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Modify this file to customize your launch splash screen -->
+<?xml version="1.0" encoding="utf-8"?><!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@android:color/white" />
-
-    <!-- You can insert your own image assets here -->
-    <!-- <item>
+    <item
+        android:width="3072dp"
+        android:height="3072dp"
+        android:drawable="@drawable/ic_jvx_bg" />
+    <item android:bottom="50dp">
         <bitmap
-            android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:gravity="center|bottom"
+            android:src="@mipmap/sib_visions" />
+    </item>
+    <item
+        android:width="138dp"
+        android:height="145dp"
+        android:drawable="@drawable/ic_jvx_ss"
+        android:gravity="center|top"
+        android:top="100dp" />
 </layer-list>
