Fixed splash screens

--- a/android/app/src/main/res/drawable-v23/launch_background.xml
+++ b/android/app/src/main/res/drawable-v23/launch_background.xml
@@ -5,4 +5,13 @@
     <item
         android:drawable="@drawable/ic_jvx_bg"
         android:gravity="fill" />
+    <item android:bottom="50dp">
+        <bitmap
+            android:gravity="center|bottom"
+            android:src="@mipmap/sib_visions" />
+    </item>
+    <item
+        android:drawable="@drawable/ic_jvx_ss"
+        android:gravity="center|top"
+        android:top="100dp" />
 </layer-list>
