--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Use LaunchTheme for SDK < 31 -->
-    <style name="StartTheme" parent="LaunchTheme" />
-
+<resources>
     <!-- Theme applied to the Android Window while the process is starting when the OS's Dark Mode setting is off -->
     <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <!-- Show a splash screen on the activity. Automatically removed when
-             Flutter draws its first frame -->
+             the Flutter engine draws its first frame -->
         <item name="android:windowBackground">@drawable/launch_background</item>
+        <item name="android:forceDarkAllowed">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
     </style>
     <!-- Theme applied to the Android Window as soon as the process has started.
          This theme determines the color of the Android Window while your
@@ -17,17 +17,5 @@
          This Theme is only used starting with V2 of Flutter's Android embedding. -->
     <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <item name="android:windowBackground">?android:colorBackground</item>
-    </style>
-
-    <!-- Splash Screen Theme -->
-    <style name="AppSplash" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">#E3E3E3</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_j</item>
-        <item name="windowSplashScreenIconBackgroundColor">#DADADA</item>
-        <item name="postSplashScreenTheme">@style/NormalTheme</item>
-        <item name="windowSplashScreenAnimationDuration">300</item>
-        <item name="android:windowSplashScreenBrandingImage" tools:targetApi="S">
-            @mipmap/branding_sib_visions
-        </item>
     </style>
 </resources>
