--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -1,7 +1,7 @@
 body {
   margin:0;
   height:100%;
-  background: #000000;
+  background-color: #000000;
   background-image: url("img/light-background.png");
   background-size: 100% 100%;
 }
@@ -50,14 +50,4 @@ body {
   position: absolute;
   bottom: 0;
   right: 0;
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    margin:0;
-    height:100%;
-    background: #000000;
-    background-image: url("img/dark-background.png");
-    background-size: 100% 100%;
-  }
 }
