--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -1,7 +1,11 @@
+html {
+  height: 100%
+}
+
 body {
-  margin:0;
-  height:100%;
-  background-color: #000000;
+  margin: 0;
+  min-height: 100%;
+  background-color: #ffffff;
   background-image: url("img/light-background.png");
   background-size: 100% 100%;
 }
